samples/_failures_safe/1761503114_7773a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_714b7ed7.c: In function ‘main’:
./samples/SAFE/__tmp_714b7ed7.c:154:21: error: expected expression at end of input
  154 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_714b7ed7.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_714b7ed7.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_714b7ed7.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_714b7ed7.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_714b7ed7.c:154:21: error: expected declaration or statement at end of input
